# reddit-to-sqlite

./: .gitignore  LICENSE  README.md  pyproject.toml
reddit_to_sqlite/: __init__.py  main.py  reddit_instance.py  view_def.sql
tests/: test_main.py  test_reddit_to_sqlite.py
